--- a/drpopovcev_com/public_html/develop.html
+++ b/drpopovcev_com/public_html/develop.html
@@ -18,61 +18,61 @@
   <div class="wrapper">
     <header class="header">
       <div class="_container">
-        <div class="header__wrapper"><a class="logo" href="/"><img src="img/logo.svg" alt="логотип"></a>
+        <div class="header__wrapper"><a class="logo" href="/ru"><img src="img/logo.svg" alt="логотип"></a>
           <div class="menu"> <a class="logo logo--menu" href=""><img src="img/logo.svg" alt="логотип"></a>
             <ul class="menu__list">
-              <li class="menu__item"> <a class="menu__link" href="about-doc.html">About me</a></li>
-              <li class="menu__item"> <a class="menu__link"><span>For patients</span>
+              <li class="menu__item"> <a class="menu__link" href="about-doc.html">Обо мне</a></li>
+              <li class="menu__item"> <a class="menu__link"><span>Пациентам</span>
                   <svg class="menu__arrow" width="13" height="8">
                     <use href="#icn-arrow-left2"></use>
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">About me</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="about.html">About the clinic</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="licenses.html">Licenses</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">Обо мне</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="about.html">О клинике</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="licenses.html">Лицензии</a></li>
 
-                    <li class="submenu__item"> <a class="submenu__link" href="results.html">Reviews</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="team.html">Team</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="results.html">Результаты лечения</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="team.html">Команда</a></li>
                   </ul>
                 </div>
               </li>
-              <li class="menu__item"> <a class="menu__link"><span>Diseases</span>
+              <li class="menu__item"> <a class="menu__link"><span>Заболевания</span>
                   <svg class="menu__arrow" width="13" height="8">
                     <use href="#icn-arrow-left2"></use>
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Varicose veins</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Venous thrombosis</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Cosmetic phlebology</a>
-                    </li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Варикозная болезнь</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Венозный тромбоз</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Косметическая
+                        флебология</a></li>
                   </ul>
                 </div>
               </li>
-              <li class="menu__item"> <a class="menu__link"><span>Treatment methods</span>
+              <li class="menu__item"> <a class="menu__link"><span>Методы лечения</span>
                   <svg class="menu__arrow" width="13" height="8">
                     <use href="#icn-arrow-left2"></use>
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Consultation with ultrasound
-                        of leg veins</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">EVLC</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Sclerotherapy</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Miniphlebectomy</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Adhesive obliteration</a>
-                    </li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Консультация с УЗИ
+                        вен ног</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">ЭВЛК</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Склеротерапия</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Минифлебэктомия</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Клеевая облитерация</a></li>
                   </ul>
                 </div>
               </li>
-              <li class="menu__item"> <a class="menu__link" href="price.html">Prices</a></li>
-              <li class="menu__item"> <a class="menu__link" href="contacts.html">Contacts</a></li>
+              <li class="menu__item"> <a class="menu__link" href="price.html">Цены</a></li>
+              <li class="menu__item"> <a class="menu__link" href="contacts.html">Контакты</a></li>
             </ul>
             <div class="lang-menu">
               <select class="language language2" onchange="switchlang2()">
-                <option value="/en/">EN</option>
                 <option value="/">RU </option>
+                <option value="/en/">EN</option>
+
 
               </select>
             </div><a class="menu__agr"> <span>Политика конфиденциальности</span><span>Обработка файлов
@@ -83,8 +83,9 @@
                   alt=""></a></div>
           </div><a class="header__phone" href="tel:+79261973643">+7 (926) 197 36 43 <span>Личный номер врача</span></a>
           <select class="language language1" onchange="switchlang1()">
-            <option value="/en/">EN</option>
             <option value="/">RU </option>
+            <option value="/en/">EN</option>
+
 
           </select>
           <div class="burger"> </div>
@@ -93,75 +94,71 @@
     </header>
     <main class="content-404">
       <div class="_container">
-        <h1 class="title">404</h1>
-        <h3>Page not found</h3>
-        <p>Unfortunately, the page you requested does not exist, has been deleted or has been renamed.</p><a
-          class="btn btn--default" href="">Go to home page</a>
+        <h1 class="title">Page under development</h1>
       </div>
     </main>
     <footer class="footer">
       <div class="_container">
         <div class="footer__wrapper">
-          <div class="footer__col"> <a class="footer__logo" href="/"><img src="img/logo-footer.svg" alt="логотип"></a>
-            <div class="social social--footer"><a class="social__link" href=""><img src="img/YouTube-grey.png"
-                  alt=""></a><a class="social__link" href="https://www.instagram.com/dr.popovcev.dubai"><img
-                  src="img/Instagram-grey.png" alt=""></a><a class="social__link" href=""><img
-                  src="img/WhatsApp-grey.png" alt=""></a></div>
+          <div class="footer__col"> <a class="footer__logo" href="/ru"><img src="img/logo-footer.svg" alt="логотип"></a>
+            <div class="social social--footer"><a class="social__link" href=""><img src="img/VKcom-grey.png"
+                  alt=""></a><a class="social__link" href=""><img src="img/YouTube-grey.png" alt=""></a><a
+                class="social__link" href=""><img src="img/Instagram-grey.png" alt=""></a><a class="social__link"
+                href=""><img src="img/WhatsApp-grey.png" alt=""></a></div>
           </div>
           <div class="footer__col">
             <div class="footer__box ga1">
               <h5 class="footer__title">
-                For patients
+                Пациентам
                 <svg width="10" height="10">
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="about-doc.html">About me</a><a
-                  class="footer__link" href="about.html">About the clinic</a><a class="footer__link"
-                  href="licenses.html">Licenses</a><a class="footer__link" href="price.html">Prices</a><a
-                  class="footer__link" href="answers.html">Answers (FAQ)</a><a class="footer__link"
-                  href="results.html">Reviews</a><a class="footer__link" href="contacts.html">Contacts</a>
+              <div class="footer__content"><a class="footer__link" href="about-doc.html">Обо мне</a><a
+                  class="footer__link" href="about.html">О клинике</a><a class="footer__link"
+                  href="licenses.html">Лицензии</a><a class="footer__link" href="price.html">Цены</a><a
+                  class="footer__link" href="answers.html">Ответы (FAQ)</a><a class="footer__link"
+                  href="results.html">Результаты лечения</a><a class="footer__link" href="contacts.html">Контакты</a>
               </div>
             </div>
-            <div class="footer__box footer__politics ga4"><a class="footer__link" href="">Privacy Policy</a><a
-                class="footer__link" href="">Handling Cookies</a></div>
+            <div class="footer__box footer__politics ga4"><a class="footer__link" href="">Политика
+                конфиденциальности</a><a class="footer__link" href="">Обработка файлов Cookies</a></div>
             <div class="footer__box ga2">
               <h5 class="footer__title">
-                Diseases
+                Заболевания
                 <svg width="10" height="10">
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="develop.html">Varicose veins</a><a
-                  class="footer__link" href="develop.html">Venous thrombosis</a><a class="footer__link"
-                  href="develop.html">Cosmetic phlebology</a></div>
+              <div class="footer__content"><a class="footer__link" href="develop.html">Варикозная болезнь</a><a
+                  class="footer__link" href="develop.html">Венозный тромбоз</a><a class="footer__link"
+                  href="develop.html">Косметическая флебология</a></div>
             </div>
             <div class="footer__box ga5">
               <h5 class="footer__title">
-                Treatment methods
+                Методы лечения
                 <svg width="10" height="10">
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="develop.html">Consultation with ultrasound of
-                  leg veins</a><a class="footer__link" href="develop.html">EVLC</a><a class="footer__link"
-                  href="develop.html">Sclerotherapy</a><a class="footer__link" href="develop.html">Miniphlebectomy</a><a
-                  class="footer__link" href="develop.html">Adhesive obliteration</a></div>
+              <div class="footer__content"><a class="footer__link" href="develop.html">Консультация с УЗИ вен ног</a><a
+                  class="footer__link" href="develop.html">ЭВЛК</a><a class="footer__link"
+                  href="develop.html">Склеротерапия</a><a class="footer__link" href="develop.html">Минифлебэктомия</a><a
+                  class="footer__link" href="develop.html">Клеевая облитерация</a></div>
             </div>
             <div class="footer__box ga3">
               <h5 class="footer__title">
-                Contacts
+                Контакты
                 <svg width="10" height="10">
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
               <div class="footer__content">
-                <p class="footer__text">Dubai, Marina,<br>Habtoor Grand Resort, Autograph Collection. Clinic
-                  «molodost’»</p>
-                <p class="footer__text">Every day from 9 to 21.</p>
-                <p class="footer__text">Reception and consultation only by appointment by phone +7 (495) 008 48 83</p>
-                <p class="footer__text">Doctor’s personal number <br><a href="tel:+79261973643">+7 (926) 197 36 43</a>
-                </p>
+                <p class="footer__text">Москва, <br> ул. Краснопролетарская 8, с1.</p>
+                <p class="footer__text">Ежедневно с 9 до 21.</p>
+                <p class="footer__text">Прием и консультация только по предварительной записи по телефону
+                  +7 (495) 008 48 83</p>
+                <p class="footer__text">Личный номер доктора <br><a href="tel:+79261973643">+7 (926) 197 36 43</a></p>
               </div>
             </div>
           </div>
