--- a/drpopovcev_com/public_html/ru/licenses.html
+++ b/drpopovcev_com/public_html/ru/licenses.html
@@ -6,7 +6,9 @@
   <title>Title here</title>
   <meta content="ie=edge" http-equiv="x-ua-compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@21.2.7/build/css/intlTelInput.css">
   <link rel="stylesheet" href="css/style.min.css">
+  <link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
   <link href="https://unpkg.com/@oveleon/sticky-header@latest/build/sticky-header.css" rel="stylesheet">
   </link>
 
@@ -19,18 +21,19 @@
         <div class="header__wrapper"><a class="logo" href="/ru"><img src="img/logo.svg" alt="логотип"></a>
           <div class="menu"> <a class="logo logo--menu" href=""><img src="img/logo.svg" alt="логотип"></a>
             <ul class="menu__list">
-              <li class="menu__item"> <a class="menu__link" href="about-doc.html">О докторе</a></li>
+              <li class="menu__item"> <a class="menu__link" href="about-doc.html">Обо мне</a></li>
               <li class="menu__item"> <a class="menu__link"><span>Пациентам</span>
                   <svg class="menu__arrow" width="13" height="8">
                     <use href="#icn-arrow-left2"></use>
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">О докторе</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">Обо мне</a></li>
                     <li class="submenu__item"> <a class="submenu__link" href="about.html">О клинике</a></li>
                     <li class="submenu__item"> <a class="submenu__link" href="licenses.html">Лицензии</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="answers.html">Ответы (FAQ)</a></li>
+
                     <li class="submenu__item"> <a class="submenu__link" href="results.html">Результаты лечения</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="team.html">Команда</a></li>
                   </ul>
                 </div>
               </li>
@@ -40,9 +43,9 @@
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Варикозная болезнь</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Венозный тромбоз</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Косметическая
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Варикозная болезнь</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Венозный тромбоз</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Косметическая
                         флебология</a></li>
                   </ul>
                 </div>
@@ -53,12 +56,12 @@
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Консультация с УЗИ
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Консультация с УЗИ
                         вен ног</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">ЭВЛК</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Склеротерапия</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Минифлебэктомия</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Клеевая облитерация</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">ЭВЛК</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Склеротерапия</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Минифлебэктомия</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Клеевая облитерация</a></li>
                   </ul>
                 </div>
               </li>
@@ -78,7 +81,7 @@
                 class="social__link" href=""><img src="img/YouTube.png" alt=""></a><a class="social__link" href=""><img
                   src="img/Instagram.png" alt=""></a><a class="social__link" href=""><img src="img/WhatsApp.png"
                   alt=""></a></div>
-          </div><a class="header__phone" href="tel:84950084883">8 (495) 008 48 83</a>
+          </div><a class="header__phone" href="tel:+79261973643">+7 (926) 197 36 43 <span>Личный номер врача</span></a>
           <select class="language language1" onchange="switchlang1()">
             <option value="/">RU </option>
             <option value="/en/">EN</option>
@@ -118,21 +121,6 @@
                   <div class="swiper-slide"> <img src="img/pic17.png" alt="">
                     <p>Санитарно-эпидемиологическое заключение</p>
                   </div>
-                  <div class="swiper-slide"> <img src="img/pic15.png" alt="">
-                    <p>Санитарно-эпидемиологическое заключение</p>
-                  </div>
-                  <div class="swiper-slide"> <img src="img/pic16.png" alt="">
-                    <p>Лицензия на осуществление медицинской деятельности</p>
-                  </div>
-                  <div class="swiper-slide"> <img src="img/pic17.png" alt="">
-                    <p>Выписка из реестра лицензий</p>
-                  </div>
-                  <div class="swiper-slide"> <img src="img/pic15.png" alt="">
-                    <p>Санитарно-эпидемиологическое заключение</p>
-                  </div>
-                  <div class="swiper-slide"> <img src="img/pic16.png" alt="">
-                    <p>Санитарно-эпидемиологическое заключение</p>
-                  </div>
                 </div>
                 <div class="swiper-scrollbar"></div>
                 <div class="swiper-footer _container">
@@ -154,6 +142,21 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="_container">
+          <div class="_container-inner">
+            <div class="col-left">
+              <h2 class="title-grey">Лицензии</h2>
+            </div>
+            <div class="col-right">
+              <div class="col-right__head">
+                <h3>Лицензии</h3>
+              </div>
+              <img src="img/dha.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="slider">
         <div class="_container">
           <div class="slider__wrap _container-2">
@@ -170,24 +173,6 @@
                 </div>
                 <div class="swiper-slide"> <img src="img/pic3.png" alt="">
                   <p>Сертификат Хирургия</p>
-                </div>
-                <div class="swiper-slide"> <img src="img/pic4.png" alt="">
-                  <p>Сертификат Пластическая хирургия</p>
-                </div>
-                <div class="swiper-slide"> <img src="img/pic4.png" alt="">
-                  <p>Сертификат Пластическая хирургия</p>
-                </div>
-                <div class="swiper-slide"> <img src="img/pic4.png" alt="">
-                  <p>Сертификат Пластическая хирургия</p>
-                </div>
-                <div class="swiper-slide"> <img src="img/pic3.png" alt="">
-                  <p>Сертификат Хирургия</p>
-                </div>
-                <div class="swiper-slide"> <img src="img/pic4.png" alt="">
-                  <p>Сертификат Пластическая хирургия</p>
-                </div>
-                <div class="swiper-slide"> <img src="img/pic4.png" alt="">
-                  <p>Сертификат Пластическая хирургия</p>
                 </div>
                 <div class="swiper-slide"> <img src="img/pic4.png" alt="">
                   <p>Сертификат Пластическая хирургия</p>
@@ -220,8 +205,12 @@
               <h2 class="--left --italic"><span>Запишитесь </span><span>на консультацию</span></h2>
               <div class="feedback__inner">
                 <div class="feedback__text">
-                  <p> После часовой консультации у вас не останется вопросов касательно флебологических проблем.</p>
-                  <p> Доктор побеседует с вами, произведет осмотр и сделает УЗИ вен, после чего поставит диагноз.</p>
+                  <p>После часовой консультации у вас не останется вопросов
+                    касательно флебологических проблем
+                    .</p>
+                  <p> Я побеседую с вами, произведу осмотр и сделаю УЗИ вен.
+                    Поставлю диагноз и дам рекомендации по лечению
+                    .</p>
                   <p> Стоимость консультации с УЗИ вен — 3000 ₽ </p>
                 </div>
                 <form class="form feedback__form" action="sendmail.php">
@@ -261,7 +250,7 @@
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="about-doc.html">О докторе</a><a
+              <div class="footer__content"><a class="footer__link" href="about-doc.html">Обо мне</a><a
                   class="footer__link" href="about.html">О клинике</a><a class="footer__link"
                   href="licenses.html">Лицензии</a><a class="footer__link" href="price.html">Цены</a><a
                   class="footer__link" href="answers.html">Ответы (FAQ)</a><a class="footer__link"
@@ -277,9 +266,9 @@
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="deseases.html">Варикозная болезнь</a><a
-                  class="footer__link" href="deseases.html">Венозный тромбоз</a><a class="footer__link"
-                  href="deseases.html">Косметическая флебология</a></div>
+              <div class="footer__content"><a class="footer__link" href="develop.html">Варикозная болезнь</a><a
+                  class="footer__link" href="develop.html">Венозный тромбоз</a><a class="footer__link"
+                  href="develop.html">Косметическая флебология</a></div>
             </div>
             <div class="footer__box ga5">
               <h5 class="footer__title">
@@ -288,10 +277,10 @@
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="method.html">Консультация с УЗИ вен ног</a><a
-                  class="footer__link" href="method.html">ЭВЛК</a><a class="footer__link"
-                  href="method.html">Склеротерапия</a><a class="footer__link" href="method.html">Минифлебэктомия</a><a
-                  class="footer__link" href="method.html">Клеевая облитерация</a></div>
+              <div class="footer__content"><a class="footer__link" href="develop.html">Консультация с УЗИ вен ног</a><a
+                  class="footer__link" href="develop.html">ЭВЛК</a><a class="footer__link"
+                  href="develop.html">Склеротерапия</a><a class="footer__link" href="develop.html">Минифлебэктомия</a><a
+                  class="footer__link" href="develop.html">Клеевая облитерация</a></div>
             </div>
             <div class="footer__box ga3">
               <h5 class="footer__title">
@@ -313,6 +302,7 @@
         <p class="footer__requisites">ИП «Поповцев Максим Александрович», ИНН 1123433456, ОГРНИП 2345934059</p>
       </div>
     </footer>
+
     <a href="https://api.whatsapp.com/send/?phone=%2B79261973643&text&type=phone_number&app_absent=0"
       class="widget-whatsapp" target="_blank"></a>
     <div class="vectors"><svg id="icn-arrow-feedback" viewBox="0 0 60 60" fill="none"
@@ -346,6 +336,7 @@
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/formsSubmit.js"></script>
     <script src="https://unpkg.com/@oveleon/sticky-header@latest/build/sticky-header.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@21.2.7/build/js/intlTelInput.min.js"></script>
     <script src="js/main.js"></script>
   </div>
 </body>
