--- a/drpopovcev_com/public_html/ru/results.html
+++ b/drpopovcev_com/public_html/ru/results.html
@@ -6,7 +6,9 @@
   <title>Title here</title>
   <meta content="ie=edge" http-equiv="x-ua-compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@21.2.7/build/css/intlTelInput.css">
   <link rel="stylesheet" href="css/style.min.css">
+  <link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
   <link href="https://unpkg.com/@oveleon/sticky-header@latest/build/sticky-header.css" rel="stylesheet">
   </link>
 
@@ -19,18 +21,19 @@
         <div class="header__wrapper"><a class="logo" href="/ru"><img src="img/logo.svg" alt="логотип"></a>
           <div class="menu"> <a class="logo logo--menu" href=""><img src="img/logo.svg" alt="логотип"></a>
             <ul class="menu__list">
-              <li class="menu__item"> <a class="menu__link" href="about-doc.html">О докторе</a></li>
+              <li class="menu__item"> <a class="menu__link" href="about-doc.html">Обо мне</a></li>
               <li class="menu__item"> <a class="menu__link"><span>Пациентам</span>
                   <svg class="menu__arrow" width="13" height="8">
                     <use href="#icn-arrow-left2"></use>
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">О докторе</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">Обо мне</a></li>
                     <li class="submenu__item"> <a class="submenu__link" href="about.html">О клинике</a></li>
                     <li class="submenu__item"> <a class="submenu__link" href="licenses.html">Лицензии</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="answers.html">Ответы (FAQ)</a></li>
+
                     <li class="submenu__item"> <a class="submenu__link" href="results.html">Результаты лечения</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="team.html">Команда</a></li>
                   </ul>
                 </div>
               </li>
@@ -40,9 +43,9 @@
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Варикозная болезнь</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Венозный тромбоз</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Косметическая
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Варикозная болезнь</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Венозный тромбоз</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Косметическая
                         флебология</a></li>
                   </ul>
                 </div>
@@ -53,12 +56,12 @@
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Консультация с УЗИ
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Консультация с УЗИ
                         вен ног</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">ЭВЛК</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Склеротерапия</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Минифлебэктомия</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Клеевая облитерация</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">ЭВЛК</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Склеротерапия</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Минифлебэктомия</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Клеевая облитерация</a></li>
                   </ul>
                 </div>
               </li>
@@ -78,7 +81,7 @@
                 class="social__link" href=""><img src="img/YouTube.png" alt=""></a><a class="social__link" href=""><img
                   src="img/Instagram.png" alt=""></a><a class="social__link" href=""><img src="img/WhatsApp.png"
                   alt=""></a></div>
-          </div><a class="header__phone" href="tel:84950084883">8 (495) 008 48 83</a>
+          </div><a class="header__phone" href="tel:+79261973643">+7 (926) 197 36 43 <span>Личный номер врача</span></a>
           <select class="language language1" onchange="switchlang1()">
             <option value="/">RU </option>
             <option value="/en/">EN</option>
@@ -92,7 +95,108 @@
     <main class="results">
       <div class="breadcrumbs _container"> <a class="breadcrumbs__link" href="/ru">Главная</a><a
           class="breadcrumbs__link active">Результаты лечения</a></div>
-      <section class="mt0">
+      <section class="slider">
+        <div class="_container">
+          <div class="slider__wrap _container-inner">
+            <div class="col-left">
+              <h2 class="title-grey">Результаты лечения</h2>
+            </div>
+            <div class="col-right">
+              <div class="col-right__head">
+                <h3>Заметный результат</h3>
+                <p>Посмотрите фотографии и видео до и после процедуры.</p>
+              </div>
+            </div>
+          </div>
+          <div class="_container-inner-2">
+            <div class="col-left"> </div>
+            <div class="col-right">
+              <div class="tab" id="tab-1">
+                <div class="tab-nav">
+                  <button class="tab-btn tab-btn-active" data-target-id="0">Все</button>
+                  <button class="tab-btn" data-target-id="1">Фото</button>
+                  <button class="tab-btn" data-target-id="2">Видео</button>
+                </div>
+                <div class="tab-content">
+                  <div class="tab-pane tab-pane-show" data-id="0">
+                    <div class="swiper slider-result -margin" id="slider-result-1">
+                      <div class="swiper-wrapper">
+                        <div class="swiper-slide"> <img src="img/pic1.png" alt=""></div>
+                        <div class="swiper-slide"> <img src="img/pic1.png" alt=""></div>
+                        <div class="swiper-slide"> <img src="img/pic1.png" alt=""></div>
+                      </div>
+                      <div class="swiper-footer _container">
+                        <div class="swiper-navigation">
+                          <div class="swiper-button-prev">
+                            <svg width="80" height="80">
+                              <use href="#icn-arrow-prev"></use>
+                            </svg>
+                          </div>
+                          <div class="swiper-button-next">
+                            <svg width="80" height="80">
+                              <use href="#icn-arrow-next"></use>
+                            </svg>
+                          </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tab-pane" data-id="1">
+                    <div class="swiper slider-result -margin" id="slider-result-2">
+                      <div class="swiper-wrapper">
+                        <div class="swiper-slide"> <img src="img/pic1.png" alt=""></div>
+                        <div class="swiper-slide"> <img src="img/pic1.png" alt=""></div>
+                        <div class="swiper-slide"> <img src="img/pic1.png" alt=""></div>
+                      </div>
+                      <div class="swiper-footer _container">
+                        <div class="swiper-navigation">
+                          <div class="swiper-button-prev">
+                            <svg width="80" height="80">
+                              <use href="#icn-arrow-prev"></use>
+                            </svg>
+                          </div>
+                          <div class="swiper-button-next">
+                            <svg width="80" height="80">
+                              <use href="#icn-arrow-next"></use>
+                            </svg>
+                          </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tab-pane" data-id="2">
+                    <div class="swiper slider-result -margin" id="slider-result-3">
+                      <div class="swiper-wrapper">
+                        <div class="swiper-slide"> <img src="img/pic1.png" alt=""></div>
+                        <div class="swiper-slide"> <img src="img/pic1.png" alt=""></div>
+                        <div class="swiper-slide"> <img src="img/pic1.png" alt=""></div>
+                      </div>
+                      <div class="swiper-footer _container">
+                        <div class="swiper-navigation">
+                          <div class="swiper-button-prev">
+                            <svg width="80" height="80">
+                              <use href="#icn-arrow-prev"></use>
+                            </svg>
+                          </div>
+                          <div class="swiper-button-next">
+                            <svg width="80" height="80">
+                              <use href="#icn-arrow-next"></use>
+                            </svg>
+                          </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- <section class="mt0">
         <div class="_container">
           <div class="_container-2">
             <h1 class="main-block__title main-block__title--results">Результаты лечения</h1>
@@ -230,8 +334,12 @@
               <h2 class="--left --italic"><span>Запишитесь </span><span>на консультацию</span></h2>
               <div class="feedback__inner">
                 <div class="feedback__text">
-                  <p> После часовой консультации у вас не останется вопросов касательно флебологических проблем.</p>
-                  <p> Доктор побеседует с вами, произведет осмотр и сделает УЗИ вен, после чего поставит диагноз.</p>
+                  <p>После часовой консультации у вас не останется вопросов
+                    касательно флебологических проблем
+                    .</p>
+                  <p> Я побеседую с вами, произведу осмотр и сделаю УЗИ вен.
+                    Поставлю диагноз и дам рекомендации по лечению
+                    .</p>
                   <p> Стоимость консультации с УЗИ вен — 3000 ₽ </p>
                 </div>
                 <form class="form feedback__form" action="sendmail.php">
@@ -252,7 +360,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer class="footer">
       <div class="_container">
@@ -271,7 +379,7 @@
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="about-doc.html">О докторе</a><a
+              <div class="footer__content"><a class="footer__link" href="about-doc.html">Обо мне</a><a
                   class="footer__link" href="about.html">О клинике</a><a class="footer__link"
                   href="licenses.html">Лицензии</a><a class="footer__link" href="price.html">Цены</a><a
                   class="footer__link" href="answers.html">Ответы (FAQ)</a><a class="footer__link"
@@ -287,9 +395,9 @@
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="deseases.html">Варикозная болезнь</a><a
-                  class="footer__link" href="deseases.html">Венозный тромбоз</a><a class="footer__link"
-                  href="deseases.html">Косметическая флебология</a></div>
+              <div class="footer__content"><a class="footer__link" href="develop.html">Варикозная болезнь</a><a
+                  class="footer__link" href="develop.html">Венозный тромбоз</a><a class="footer__link"
+                  href="develop.html">Косметическая флебология</a></div>
             </div>
             <div class="footer__box ga5">
               <h5 class="footer__title">
@@ -298,10 +406,10 @@
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="method.html">Консультация с УЗИ вен ног</a><a
-                  class="footer__link" href="method.html">ЭВЛК</a><a class="footer__link"
-                  href="method.html">Склеротерапия</a><a class="footer__link" href="method.html">Минифлебэктомия</a><a
-                  class="footer__link" href="method.html">Клеевая облитерация</a></div>
+              <div class="footer__content"><a class="footer__link" href="develop.html">Консультация с УЗИ вен ног</a><a
+                  class="footer__link" href="develop.html">ЭВЛК</a><a class="footer__link"
+                  href="develop.html">Склеротерапия</a><a class="footer__link" href="develop.html">Минифлебэктомия</a><a
+                  class="footer__link" href="develop.html">Клеевая облитерация</a></div>
             </div>
             <div class="footer__box ga3">
               <h5 class="footer__title">
@@ -323,6 +431,7 @@
         <p class="footer__requisites">ИП «Поповцев Максим Александрович», ИНН 1123433456, ОГРНИП 2345934059</p>
       </div>
     </footer>
+
     <a href="https://api.whatsapp.com/send/?phone=%2B79261973643&text&type=phone_number&app_absent=0"
       class="widget-whatsapp" target="_blank"></a>
     <div class="vectors"><svg id="icn-arrow-feedback" viewBox="0 0 60 60" fill="none"
@@ -356,6 +465,7 @@
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/formsSubmit.js"></script>
     <script src="https://unpkg.com/@oveleon/sticky-header@latest/build/sticky-header.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@21.2.7/build/js/intlTelInput.min.js"></script>
     <script src="js/main.js"></script>
   </div>
 </body>
