--- a/drpopovcev_com/public_html/about-doc.html
+++ b/drpopovcev_com/public_html/about-doc.html
@@ -6,7 +6,9 @@
   <title>Title here</title>
   <meta content="ie=edge" http-equiv="x-ua-compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@21.2.7/build/css/intlTelInput.css">
   <link rel="stylesheet" href="css/style.min.css">
+  <link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
   <link href="https://unpkg.com/@oveleon/sticky-header@latest/build/sticky-header.css" rel="stylesheet">
   </link>
 
@@ -19,18 +21,19 @@
         <div class="header__wrapper"><a class="logo" href="/"><img src="img/logo.svg" alt="логотип"></a>
           <div class="menu"> <a class="logo logo--menu" href=""><img src="img/logo.svg" alt="логотип"></a>
             <ul class="menu__list">
-              <li class="menu__item"> <a class="menu__link" href="about-doc.html">About the doctor</a></li>
+              <li class="menu__item"> <a class="menu__link" href="about-doc.html">About me</a></li>
               <li class="menu__item"> <a class="menu__link"><span>For patients</span>
                   <svg class="menu__arrow" width="13" height="8">
                     <use href="#icn-arrow-left2"></use>
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">About the doctor</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">About me</a></li>
                     <li class="submenu__item"> <a class="submenu__link" href="about.html">About the clinic</a></li>
                     <li class="submenu__item"> <a class="submenu__link" href="licenses.html">Licenses</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="answers.html">Answers (FAQ)</a></li>
+
                     <li class="submenu__item"> <a class="submenu__link" href="results.html">Reviews</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="team.html">Team</a></li>
                   </ul>
                 </div>
               </li>
@@ -40,9 +43,9 @@
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Varicose veins</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Venous thrombosis</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Cosmetic phlebology</a>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Varicose veins</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Venous thrombosis</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Cosmetic phlebology</a>
                     </li>
                   </ul>
                 </div>
@@ -53,12 +56,12 @@
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Consultation with ultrasound
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Consultation with ultrasound
                         of leg veins</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">EVLC</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Sclerotherapy</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Miniphlebectomy</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Adhesive obliteration</a>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">EVLC</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Sclerotherapy</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Miniphlebectomy</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Adhesive obliteration</a>
                     </li>
                   </ul>
                 </div>
@@ -78,7 +81,7 @@
                 class="social__link" href=""><img src="img/YouTube.png" alt=""></a><a class="social__link" href=""><img
                   src="img/Instagram.png" alt=""></a><a class="social__link" href=""><img src="img/WhatsApp.png"
                   alt=""></a></div>
-          </div><a class="header__phone" href="tel:84950084883">8 (495) 008 48 83</a>
+          </div><a class="header__phone" href="tel:+79261973643">+7 (926) 197 36 43 <span>Личный номер врача</span></a>
           <select class="language language1" onchange="switchlang1()">
             <option value="/en/">EN</option>
             <option value="/">RU </option>
@@ -96,14 +99,16 @@
           <div class="_container-inner">
             <div class="col-left"> </div>
             <div class="col-right">
-              <h1 class="main-block__title">POPOVTSEV <br> MAXIM ALEXANDROVICH
+              <h1 class="main-block__title">Dr Maksim Popovtsev
               </h1>
               <div class="main-block__content">
-                <h3 class="main-block__sub-title">Surgeon, phlebologist</h3>
+                <h3 class="main-block__sub-title">Surgeon - Phlebologist, phD <br> DHA License</h3>
                 <div class="main-block__text">
-                  <p>I use all modern minimally invasive methods of treating varicose veins: various types of
-                    sclerotherapy, endovasal laser
-                    coagulation (EVLC), radiofrequency ablation (RFA), miniphlebectomy.</p>
+                  <p>I have been engaged in daily surgical practice for 17 years, making about 200 surgical operations
+                    per year
+                    My main focus is the diagnosis and treatment of diseases of the venous system
+                    Founder and director of clinics in Dubai (UAE) and Moscow (Russia)
+                  </p>
                 </div>
                 <button class="btn btn--black main-block__btn">Sign up for a consultation</button>
               </div>
@@ -111,13 +116,13 @@
           </div>
         </div>
       </section>
-      <div class="picture video__about-doc _container">
+      <!-- <div class="picture video__about-doc _container">
         <iframe width="100%" height="100%"
           src="https://www.youtube.com/embed/yQemwCMRJ-M?si=8HDzjS_av33eFg_f&amp;controls=0"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
-      </div>
+      </div> -->
       <section class="slider">
         <div class="_container">
           <div class="slider__wrap _container-inner">
@@ -153,8 +158,29 @@
                       (bariotherapy)</p>
                   </div>
                   <div class="swiper-slide">
-                    <h3 class="slider-resume__title">2007</h3>
-                    <p>Graduated from Kursk State Medical University with a degree in General Medicine</p>
+                    <h3 class="slider-resume__title">2010</h3>
+                    <p>Started private practice at the ‘Medical City’ clinic since 2010</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h3 class="slider-resume__title">since 2017</h3>
+                    <p>an employee of the Department of Surgery of the First Moscow
+                      State Medical University named after I.M. Sechenov
+
+                    </p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h3 class="slider-resume__title">2022</h3>
+                    <p>Opened a phlebology clinic in Moscow (Russia)</p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h3 class="slider-resume__title">2023</h3>
+                    <p>Became a PhD in medical sciences.
+                      Wrote a Ph.D. thesis in the field of venous diseases
+                    </p>
+                  </div>
+                  <div class="swiper-slide">
+                    <h3 class="slider-resume__title">2024</h3>
+                    <p>Opened a vein treatment clinic in Dubai (UAE)</p>
                   </div>
                 </div>
               </div>
@@ -196,7 +222,7 @@
       </div>
     </div>
   </section>
-  <section class="author">
+  <!-- <section class="author">
     <div class="_container">
       <div class="author__wrapper _container-inner">
         <div class="col-left">
@@ -204,21 +230,21 @@
         </div>
         <div class="col-right">
           <h2 class="title__author --italic"><span>Popovtsev </span><span>Maxim Alexandrovich</span></h2>
-          <div class="author__content"> <img class="author__pic" src="img/Maksim_egorov.photo_7.jpg" alt="">
+          <div class="author__content"> <img class="author__pic" src="img/Maksimegorovphoto7.jpg" alt="">
             <div class="author__block">
               <h4 class="author__block-title">Surgeon, phlebologist</h4>
               <div class="author__block-text">
                 <p>I use all modern minimally invasive methods of treating varicose veins: various types of
                   sclerotherapy, endovasal laser
                   coagulation (EVLC), radiofrequency ablation (RFA), miniphlebectomy.</p>
-              </div><a class="btn btn--white author__btn" href="">More about the doctor</a>
+              </div><a href="about-doc.html" class="btn btn--white author__btn" href="">More about the doctor</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <section>
+  </section> -->
+  <!-- <section>
     <div class="_container">
       <div class="acc__wrapper _container-inner">
         <div class="col-left">
@@ -273,8 +299,8 @@
         </div>
       </div>
     </div>
-  </section>
-  <section class="slider">
+  </section> -->
+  <!-- <section class="slider">
     <div class="_container">
       <div class="slider__wrap _container-inner">
         <div class="col-left">
@@ -374,13 +400,13 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="feedback">
     <div class="_container">
       <div class="feedback__wrap _container-inner">
         <div class="col-left"> </div>
         <div class="col-right">
-          <h2 class="--left --italic"><span>Separate </span><span>application form/span></h2>
+          <h2 class="--left --italic"><span>Separate </span><span>application form</span></h2>
           <div class="feedback__inner">
             <div class="feedback__text">
               <p> After the consultation, which lasts around 1 hour, you will have no questions left regarding
@@ -461,7 +487,7 @@
       </div>
     </div>
   </section>
-  <section class="companies">
+  <!-- <section class="companies">
     <div class="_container">
       <div class="_container-inner">
         <div class="col-left">
@@ -502,7 +528,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="slider">
     <div class="_container">
       <div class="slider__wrap _container-inner">
@@ -531,22 +557,7 @@
               <div class="swiper-slide"> <img src="img/pic4.png" alt="">
                 <p>Certificate Plastic Surgery</p>
               </div>
-              <div class="swiper-slide"> <img src="img/Eligibility Letter_page-0001.JPG" alt="">
-                <p>Certificate Plastic Surgery</p>
-              </div>
-              <div class="swiper-slide"> <img src="img/pic4.png" alt="">
-                <p>Certificate Plastic Surgery</p>
-              </div>
-              <div class="swiper-slide"> <img src="img/pic3.png" alt="">
-                <p>Certificate Surgery</p>
-              </div>
-              <div class="swiper-slide"> <img src="img/pic4.png" alt="">
-                <p>Certificate Plastic Surgery</p>
-              </div>
-              <div class="swiper-slide"> <img src="img/pic4.png" alt="">
-                <p>Certificate Plastic Surgery</p>
-              </div>
-              <div class="swiper-slide"> <img src="img/pic4.png" alt="">
+              <div class="swiper-slide"> <img src="img/EligibilityLetter_page-0001.jpg" alt="">
                 <p>Certificate Plastic Surgery</p>
               </div>
             </div>
@@ -571,6 +582,21 @@
     </div>
   </section>
   <section>
+    <div class="_container">
+      <div class="_container-inner">
+        <div class="col-left">
+          <h2 class="title-grey">Licenses</h2>
+        </div>
+        <div class="col-right">
+          <div class="col-right__head">
+            <h3>Licenses</h3>
+          </div>
+          <img src="img/dha.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- <section>
     <div class="_container">
       <div class="acc__wrapper _container-inner">
         <div class="col-left">
@@ -615,7 +641,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="about-block">
     <div class="_container">
       <div class="slider__wrap _container-inner">
@@ -657,7 +683,7 @@
             <div class="tab-content">
               <div class="tab-pane tab-pane-show" data-id="0">
                 <div id="map-google"> <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.4685335931918!2d55.14119650000001!3d25.0859964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6b5258b402c1%3A0xed92035ee4c3fe4c!2sHabtoor%20Grand%20Resort%2C%20Autograph%20Collection!5e0!3m2!1sen!2sae!4v1709847614854!5m2!1sen!2sae"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d903.3671393030801!2d55.1408833!3d25.0859956!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6bfc9e77a2ed%3A0xcc2ba5f055741931!2zTW9sb2Rvc3TigJk!5e0!3m2!1sru!2sru!4v1714211565714!5m2!1sru!2sru"
                     width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe></div>
               </div>
@@ -743,7 +769,7 @@
                 <use href="#icn-arrow-left"></use>
               </svg>
             </h5>
-            <div class="footer__content"><a class="footer__link" href="about-doc.html">About the doctor</a><a
+            <div class="footer__content"><a class="footer__link" href="about-doc.html">About me</a><a
                 class="footer__link" href="about.html">About the clinic</a><a class="footer__link"
                 href="licenses.html">Licenses</a><a class="footer__link" href="price.html">Prices</a><a
                 class="footer__link" href="answers.html">Answers (FAQ)</a><a class="footer__link"
@@ -759,9 +785,9 @@
                 <use href="#icn-arrow-left"></use>
               </svg>
             </h5>
-            <div class="footer__content"><a class="footer__link" href="deseases.html">Varicose veins</a><a
-                class="footer__link" href="deseases.html">Venous thrombosis</a><a class="footer__link"
-                href="deseases.html">Cosmetic phlebology</a></div>
+            <div class="footer__content"><a class="footer__link" href="develop.html">Varicose veins</a><a
+                class="footer__link" href="develop.html">Venous thrombosis</a><a class="footer__link"
+                href="develop.html">Cosmetic phlebology</a></div>
           </div>
           <div class="footer__box ga5">
             <h5 class="footer__title">
@@ -770,10 +796,10 @@
                 <use href="#icn-arrow-left"></use>
               </svg>
             </h5>
-            <div class="footer__content"><a class="footer__link" href="method.html">Consultation with ultrasound of
-                leg veins</a><a class="footer__link" href="method.html">EVLC</a><a class="footer__link"
-                href="method.html">Sclerotherapy</a><a class="footer__link" href="method.html">Miniphlebectomy</a><a
-                class="footer__link" href="method.html">Adhesive obliteration</a></div>
+            <div class="footer__content"><a class="footer__link" href="develop.html">Consultation with ultrasound of
+                leg veins</a><a class="footer__link" href="develop.html">EVLC</a><a class="footer__link"
+                href="develop.html">Sclerotherapy</a><a class="footer__link" href="develop.html">Miniphlebectomy</a><a
+                class="footer__link" href="develop.html">Adhesive obliteration</a></div>
           </div>
           <div class="footer__box ga3">
             <h5 class="footer__title">
@@ -827,6 +853,7 @@
   <script src="js/ya.js"></script>
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/formsSubmit.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@21.2.7/build/js/intlTelInput.min.js"></script>
   <script src="js/main.js"></script>
   <script src="https://unpkg.com/@oveleon/sticky-header@latest/build/sticky-header.js"></script>
   </div>
