--- a/drpopovcev_com/public_html/index.html
+++ b/drpopovcev_com/public_html/index.html
@@ -6,7 +6,9 @@
   <title>Title here</title>
   <meta content="ie=edge" http-equiv="x-ua-compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@21.2.7/build/css/intlTelInput.css">
   <link rel="stylesheet" href="css/style.min.css">
+  <link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
   <link href="https://unpkg.com/@oveleon/sticky-header@latest/build/sticky-header.css" rel="stylesheet">
   </link>
 
@@ -19,18 +21,19 @@
         <div class="header__wrapper"><a class="logo" href="/"><img src="img/logo.svg" alt="логотип"></a>
           <div class="menu"> <a class="logo logo--menu" href=""><img src="img/logo.svg" alt="логотип"></a>
             <ul class="menu__list">
-              <li class="menu__item"> <a class="menu__link" href="about-doc.html">About the doctor</a></li>
+              <li class="menu__item"> <a class="menu__link" href="about-doc.html">About me</a></li>
               <li class="menu__item"> <a class="menu__link"><span>For patients</span>
                   <svg class="menu__arrow" width="13" height="8">
                     <use href="#icn-arrow-left2"></use>
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">About the doctor</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="about-doc.html">About me</a></li>
                     <li class="submenu__item"> <a class="submenu__link" href="about.html">About the clinic</a></li>
                     <li class="submenu__item"> <a class="submenu__link" href="licenses.html">Licenses</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="answers.html">Answers (FAQ)</a></li>
+
                     <li class="submenu__item"> <a class="submenu__link" href="results.html">Reviews</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="team.html">Team</a></li>
                   </ul>
                 </div>
               </li>
@@ -40,9 +43,9 @@
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Varicose veins</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Venous thrombosis</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="deseases.html">Cosmetic phlebology</a>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Varicose veins</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Venous thrombosis</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Cosmetic phlebology</a>
                     </li>
                   </ul>
                 </div>
@@ -53,12 +56,12 @@
                   </svg></a>
                 <div class="submenu">
                   <ul class="submenu__wrap">
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Consultation with ultrasound
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Consultation with ultrasound
                         of leg veins</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">EVLC</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Sclerotherapy</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Miniphlebectomy</a></li>
-                    <li class="submenu__item"> <a class="submenu__link" href="method.html">Adhesive obliteration</a>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">EVLC</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Sclerotherapy</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Miniphlebectomy</a></li>
+                    <li class="submenu__item"> <a class="submenu__link" href="develop.html">Adhesive obliteration</a>
                     </li>
                   </ul>
                 </div>
@@ -78,7 +81,7 @@
                 class="social__link" href=""><img src="img/YouTube.png" alt=""></a><a class="social__link" href=""><img
                   src="img/Instagram.png" alt=""></a><a class="social__link" href=""><img src="img/WhatsApp.png"
                   alt=""></a></div>
-          </div><a class="header__phone" href="tel:84950084883">8 (495) 008 48 83</a>
+          </div><a class="header__phone" href="tel:+79261973643">+7 (926) 197 36 43 <span>Личный номер врача</span></a>
           <select class="language language1" onchange="switchlang1()">
             <option value="/en/">EN</option>
             <option value="/">RU </option>
@@ -94,13 +97,16 @@
           <div class="_container-inner">
             <div class="col-left"> </div>
             <div class="col-right">
-              <h1 class="main-block__title main-block__title--index">Treatment <br> of varicose veins</h1>
+              <h1 class="main-block__title main-block__title--index">Venous <br> thrombosis</h1>
               <div class="main-block__content">
-                <h3 class="main-block__sub-title">Phlebology Clinic of Dr. Popovtsev</h3>
+                <h3 class="main-block__sub-title">Phlebology Clinic in Dubai candidate of sciences, doctor Popovtsev
+                </h3>
                 <div class="main-block__text">
-                  <p>I use all modern minimally invasive methods of treating varicose veins: various types of
-                    sclerotherapy, endovasal laser
-                    coagulation (EVLC), radiofrequency ablation (RFA), miniphlebectomy.</p>
+                  <p>I have been engaged in daily surgical practice for 17 years, making about 200 surgical operations
+                    per year
+                    My main focus is the diagnosis and treatment of diseases of the venous system
+                    Founder and director of clinics in Dubai (UAE) and Moscow (Russia)
+                  </p>
                 </div>
                 <button class="btn btn--black main-block__btn">Sign up for a consultation</button>
               </div>
@@ -108,7 +114,7 @@
           </div>
         </div>
       </section>
-      <div class="picture _container"><img src="img/pic18.png" alt=""></div>
+      <div class="picture _container"><img src="img/pic19.png" alt=""></div>
       <section class="grid-blocks">
         <div class="_container">
           <div class="_container-inner">
@@ -119,18 +125,15 @@
               <div class="grid-blocks__wrapper">
                 <div class="grid-blocks__col">
                   <h4 class="grid-blocks__title">Treatment of varicose veins</h4>
-                  <p>I use modern methods of treating varicose veins: types of sclerotherapy, endovasal laser
-                    coagulation.</p>
+                  <a href="develop.html" class="btn btn--white">More details</a>
                 </div>
                 <div class="grid-blocks__col">
-                  <h4 class="grid-blocks__title">Treatment of venous thrombosis</h4>
-                  <p>I use all modern minimally invasive methods of treating varicose veins: various types of
-                    sclerotherapy.</p>
+                  <h4 class="grid-blocks__title">Venous thrombosis</h4>
+                  <a href="develop.html" class="btn btn--white">More details</a>
                 </div>
                 <div class="grid-blocks__col">
                   <h4 class="grid-blocks__title">Cosmetic phlebology</h4>
-                  <p>I use all modern minimally invasive methods of treating varicose veins: various types of
-                    sclerotherapy, RFA, EVLT.</p>
+                  <a href="develop.html" class="btn btn--white">More details</a>
                 </div>
               </div>
             </div>
@@ -193,7 +196,7 @@
           </div>
         </div>
       </section>
-      <section class="author">
+      <!-- <section class="author">
         <div class="_container">
           <div class="author__wrapper _container-inner">
             <div class="col-left">
@@ -201,20 +204,20 @@
             </div>
             <div class="col-right">
               <h2 class="title__author --italic"><span>Popovtsev </span><span>Maxim Alexandrovich</span></h2>
-              <div class="author__content"> <img class="author__pic" src="img/Maksim_egorov.photo_7.jpg" alt="">
+              <div class="author__content"> <img class="author__pic" src="img/Maksimegorovphoto7.jpg" alt="">
                 <div class="author__block">
                   <h4 class="author__block-title">Surgeon, phlebologist</h4>
                   <div class="author__block-text">
                     <p>I use all modern minimally invasive methods of treating varicose veins: various types of
                       sclerotherapy, endovasal laser
                       coagulation (EVLC), radiofrequency ablation (RFA), miniphlebectomy.</p>
-                  </div><a class="btn btn--white author__btn" href="">More about the doctor</a>
+                  </div><a href="about-doc.html" class="btn btn--white author__btn" href="">More about the doctor</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="slider">
         <div class="_container">
           <div class="slider__wrap _container-inner">
@@ -351,13 +354,14 @@
           <div class="feedback__wrap _container-inner">
             <div class="col-left"> </div>
             <div class="col-right">
-              <h2 class="--left --italic"><span>Separate </span><span>application form/span></h2>
+              <h2 class="--left --italic"><span>Separate </span><span>application form</span></h2>
               <div class="feedback__inner">
                 <div class="feedback__text">
-                  <p> After the consultation, which lasts around 1 hour, you will have no questions left regarding
-                    phlebological problems.</p>
-                  <p> The doctor will ask several questions, examine the veins and make an ultrasound. You will be
-                    diagnosed after these procedures. </p>
+                  <p>After an hour-long consultation, you will have no questions left regarding your phlebological
+                    problems.</p>
+                  <p>I will talk to you, examine and do an ultrasound of the veins.
+                    I will make a diagnosis and give recommendations for the treatment
+                     </p>
                   <p> Cost of the consultation with the ultrasound of veins - 800 AED </p>
                 </div>
                 <form class="form feedback__form" action="sendmail.php">
@@ -433,7 +437,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <!-- <section>
         <div class="_container">
           <div class="acc__wrapper _container-inner">
             <div class="col-left">
@@ -478,7 +482,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="about-block">
         <div class="_container">
           <div class="slider__wrap _container-inner">
@@ -520,7 +524,7 @@
                 <div class="tab-content">
                   <div class="tab-pane tab-pane-show" data-id="0">
                     <div id="map-google"> <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.4685335931918!2d55.14119650000001!3d25.0859964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6b5258b402c1%3A0xed92035ee4c3fe4c!2sHabtoor%20Grand%20Resort%2C%20Autograph%20Collection!5e0!3m2!1sen!2sae!4v1709847614854!5m2!1sen!2sae"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d903.3671393030801!2d55.1408833!3d25.0859956!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6bfc9e77a2ed%3A0xcc2ba5f055741931!2zTW9sb2Rvc3TigJk!5e0!3m2!1sru!2sru!4v1714211565714!5m2!1sru!2sru"
                         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                   </div>
@@ -612,7 +616,7 @@
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="about-doc.html">About the doctor</a><a
+              <div class="footer__content"><a class="footer__link" href="about-doc.html">About me</a><a
                   class="footer__link" href="about.html">About the clinic</a><a class="footer__link"
                   href="licenses.html">Licenses</a><a class="footer__link" href="price.html">Prices</a><a
                   class="footer__link" href="answers.html">Answers (FAQ)</a><a class="footer__link"
@@ -628,9 +632,9 @@
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="deseases.html">Varicose veins</a><a
-                  class="footer__link" href="deseases.html">Venous thrombosis</a><a class="footer__link"
-                  href="deseases.html">Cosmetic phlebology</a></div>
+              <div class="footer__content"><a class="footer__link" href="develop.html">Varicose veins</a><a
+                  class="footer__link" href="develop.html">Venous thrombosis</a><a class="footer__link"
+                  href="develop.html">Cosmetic phlebology</a></div>
             </div>
             <div class="footer__box ga5">
               <h5 class="footer__title">
@@ -639,10 +643,10 @@
                   <use href="#icn-arrow-left"></use>
                 </svg>
               </h5>
-              <div class="footer__content"><a class="footer__link" href="method.html">Consultation with ultrasound of
-                  leg veins</a><a class="footer__link" href="method.html">EVLC</a><a class="footer__link"
-                  href="method.html">Sclerotherapy</a><a class="footer__link" href="method.html">Miniphlebectomy</a><a
-                  class="footer__link" href="method.html">Adhesive obliteration</a></div>
+              <div class="footer__content"><a class="footer__link" href="develop.html">Consultation with ultrasound of
+                  leg veins</a><a class="footer__link" href="develop.html">EVLC</a><a class="footer__link"
+                  href="develop.html">Sclerotherapy</a><a class="footer__link" href="develop.html">Miniphlebectomy</a><a
+                  class="footer__link" href="develop.html">Adhesive obliteration</a></div>
             </div>
             <div class="footer__box ga3">
               <h5 class="footer__title">
@@ -665,6 +669,7 @@
         <p class="footer__requisites">ИП «Поповцев Максим Александрович», ИНН 1123433456, ОГРНИП 2345934059</p>
       </div>
     </footer>
+
     <a href="https://api.whatsapp.com/send/?phone=%2B79261973643&text&type=phone_number&app_absent=0"
       class="widget-whatsapp" target="_blank"></a>
     <div class="vectors"><svg id="icn-arrow-feedback" viewBox="0 0 60 60" fill="none"
@@ -698,6 +703,7 @@
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/formsSubmit.js"></script>
     <script src="https://unpkg.com/@oveleon/sticky-header@latest/build/sticky-header.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@21.2.7/build/js/intlTelInput.min.js"></script>
     <script src="js/main.js"></script>
   </div>
 </body>
